src/test/ui/asm/invalid-inline-asm-2.stderr
error: couldn't allocate output register for constraint 'd'
  --> $DIR/invalid-inline-asm-2.rs:7:9
   |
LL |         asm!("" : "=d"(a) : : : );
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

